--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        Hello World
+        This portfolio page is still work in progress.<br>
+        To check out my current portfolio page, 
+        <a href="https://frederikpribyl.myportfolio.com/"> click here</a>.
     </body>
 </html>
