--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
+    
     <body>
         This portfolio page is still work in progress.<br>
         To check out my current portfolio page, 
         <a href="https://frederikpribyl.myportfolio.com/"> click here</a>.
     </body>
+    <script>
+        document.addEventListener("keypress", function onEvent(event) {
+                if (event.key === "Enter") {
+                    window.location.href = "landing_page.html";
+                }
+            });
+    </script>
 </html>
