--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <link rel="stylesheet" href="wip_page.css">
+    </head>
     <body>
-        This portfolio page is still work in progress.<br>
-        To check out my current portfolio page, 
-        <a href="https://frederikpribyl.myportfolio.com/"> click here</a>.
+        <div id="disclaimer_box">
+            <div id="disclaimer_text">
+                This portfolio page is still work in progress.<br>
+                To check out my current portfolio page, 
+                <a href="https://frederikpribyl.myportfolio.com/"> click here</a>.
+            </div>
+        </div>
     </body>
     <script>
         document.addEventListener("keypress", function onEvent(event) {
