--- a/pygame.html
+++ b/pygame.html
@@ -6,8 +6,8 @@
     <body>
         <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"
             src="pygame/index.html"
-            style="border:0px #000000 none;" name="Pong: Star Wars Remix" scrolling="no" msallowfullscreen="true"
+            style="border:0px #000000 none;" name="PygameRemake" scrolling="no" msallowfullscreen="true"
             allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px"
-            marginwidth="320px" height="540px" width="960px"></iframe>
+            marginwidth="320px" height="640px" width="960px"></iframe>
     </body>
 </html>
