--- a/pygame.html
+++ b/pygame.html
@@ -4,6 +4,10 @@
         
     </header>
     <body>
-    <iframe src="https://i.simmer.io/@Synthetix/fruitplatformer" style="width:1920px;height:1080px"></iframe>
+        <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"
+            src="pygame/index.html"
+            style="border:0px #000000 none;" name="PygameRemake" scrolling="no" msallowfullscreen="true"
+            allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px"
+            marginwidth="320px" height="640px" width="960px"></iframe>
     </body>
 </html>
