--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
         document.addEventListener("keypress", function onEvent(event) {
                 if (event.key === "Enter") {
-                    window.location.href = "pygame.html";
+                    window.location.href = "three_js/dist/index.html";
                 }
             });
     </script>
