--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="wip_page.css">
+        <meta http-equiv="Refresh" content="3; url=https://frederikpribyl.myportfolio.com/" />
     </head>
     <body>
         <div id="disclaimer_box">
             <div id="disclaimer_text">
                 This portfolio page is still work in progress.<br>
-                To check out my current portfolio page, 
-                <a href="https://frederikpribyl.myportfolio.com/"> click here</a>.
+                You will be redirected to my portfolio page in 3 seconds.
+                <a href="https://frederikpribyl.myportfolio.com/"> or click here </a>.
             </div>
         </div>
     </body>
