--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="wip_page.css">
-        <meta http-equiv="Refresh" content="3; url=https://frederikpribyl.myportfolio.com/" />
+        <meta http-equiv="Refresh" content="1; url=https://frederikpribyl.myportfolio.com/" />
     </head>
     <body>
         <div id="disclaimer_box">
             <div id="disclaimer_text">
-                This portfolio page is still work in progress.<br>
-                You will be redirected to my portfolio page in 3 seconds.
+                redirecting...
                 <a href="https://frederikpribyl.myportfolio.com/"> or click here </a>.
             </div>
         </div>
